--- a/Vehicle_DomNet/Vehicle.DAL/Vehicle.DAL.csproj
+++ b/Vehicle_DomNet/Vehicle.DAL/Vehicle.DAL.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Vehicle.Model\Vehicle.Model.csproj" />
+  </ItemGroup>
+
 </Project>
