data seed, kreiranje baze

--- a/Vehicle_DomNet/Vehicle.WebAPI/appsettings.json
+++ b/Vehicle_DomNet/Vehicle.WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=Vehicle_DB;Trusted_Connection=true;MultipleActiveResultSets=true;Encrypt=False;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
