--- a/Vehicle_DomNet/Vehicle.Service.Common/Vehicle.Service.Common.csproj
+++ b/Vehicle_DomNet/Vehicle.Service.Common/Vehicle.Service.Common.csproj
@@ -7,10 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\Vehicle.Model.Common\Vehicle.Model.Common.csproj" />
     <ProjectReference Include="..\Vehicle.Model\Vehicle.Model.csproj" />
   </ItemGroup>
 
