Dodani filtering, paging, sorting i unit of work

--- a/Vehicle_DomNet/Vehicle.Service.Common/Vehicle.Service.Common.csproj
+++ b/Vehicle_DomNet/Vehicle.Service.Common/Vehicle.Service.Common.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Vehicle.Common\Vehicle.Common.csproj" />
     <ProjectReference Include="..\Vehicle.Model.Common\Vehicle.Model.Common.csproj" />
     <ProjectReference Include="..\Vehicle.Model\Vehicle.Model.csproj" />
   </ItemGroup>
