--- a/Vehicle_DomNet/Vehicle.Repository.Common/Vehicle.Repository.Common.csproj
+++ b/Vehicle_DomNet/Vehicle.Repository.Common/Vehicle.Repository.Common.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Vehicle.Common\Vehicle.Common.csproj" />
     <ProjectReference Include="..\Vehicle.Model\Vehicle.Model.csproj" />
   </ItemGroup>
 
