--- a/Vehicle_DomNet/Vehicle.Repository/Vehicle.Repository.csproj
+++ b/Vehicle_DomNet/Vehicle.Repository/Vehicle.Repository.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Vehicle.Common\Vehicle.Common.csproj" />
     <ProjectReference Include="..\Vehicle.DAL\Vehicle.DAL.csproj" />
     <ProjectReference Include="..\Vehicle.Repository.Common\Vehicle.Repository.Common.csproj" />
   </ItemGroup>
