--- a/Vehicle_DomNet/Vehicle.Service/Vehicle.Service.csproj
+++ b/Vehicle_DomNet/Vehicle.Service/Vehicle.Service.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.5.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Vehicle.Repository.Common\Vehicle.Repository.Common.csproj" />
     <ProjectReference Include="..\Vehicle.Service.Common\Vehicle.Service.Common.csproj" />
   </ItemGroup>
