--- a/vehicle_react/package.json
+++ b/vehicle_react/package.json
@@ -7,7 +7,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "mobx-react": "^7.6.0",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
